--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -1,4 +1,6 @@
-specVersion: 0.0.1
+specVersion: 0.0.4
+description: Swap, yield, lend, borrow, leverage, limit, and launch all on one, Soul-powered, community-driven ecosystem.
+repository: https://github.com/unchase-subgraphs/soulswap-fantom-subgraph
 schema:
   file: ./schema.graphql
 dataSources:
@@ -8,25 +10,46 @@ dataSources:
     source:
       address: "0x1120e150dA9def6Fe930f4fEDeD18ef57c0CA7eF"
       abi: Factory
+      startBlock: 16108819
     mapping:
       kind: ethereum/events
-      apiVersion: 0.0.5
+      apiVersion: 0.0.6
       language: wasm/assemblyscript
       entities:
-        - FeeToSetter
-        - PairCreated
-        - SetFeeTo
-        - SetMigrator
+        - Pair
+        - Token
       abis:
         - name: Factory
           file: ./abis/Factory.json
+        - name: ERC20
+          file: ./abis/ERC20.json
+        - name: ERC20SymbolBytes
+          file: ./abis/ERC20SymbolBytes.json
+        - name: ERC20NameBytes
+          file: ./abis/ERC20NameBytes.json
       eventHandlers:
-        - event: FeeToSetter(indexed address,indexed address)
-          handler: handleFeeToSetter
         - event: PairCreated(indexed address,indexed address,address,uint256)
           handler: handlePairCreated
-        - event: SetFeeTo(indexed address,indexed address)
-          handler: handleSetFeeTo
-        - event: SetMigrator(indexed address,indexed address)
-          handler: handleSetMigrator
       file: ./src/factory.ts
+templates:
+  - kind: ethereum/contract
+    name: Pair
+    network: fantom
+    source:
+      abi: Pair
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.6
+      language: wasm/assemblyscript
+      file: ./src/core.ts
+      entities:
+        - Pair
+        - Token
+      abis:
+        - name: Pair
+          file: ./abis/pair.json
+        - name: Factory
+          file: ./abis/factory.json
+      eventHandlers:
+        - event: Sync(uint112,uint112)
+          handler: handleSync
